@@ -15,6 +15,7 @@ opsi-winst/opsi-script (4.12.0.26) stable; urgency=low
   * osparser: doAktionen: registry: Ignoring parameter /32bit for /AllNTUserdats. ; fixes #3643
   * osjson: jsonAsArrayToStringList: "[true]" now results to "true" ; fixes #3627
   * oswebservice: createSocket: log openssl version
+  * osfunclin: getLinuxDistroType: read /etc/os-release
 
 -- Detlef Oertel <d.oertel@uib.de>  Tue, 28 Aug 2018:15:00:00 +0200
 
@@ -28,7 +29,7 @@ opsi-winst/opsi-script (4.12.0.25) stable; urgency=low
 opsi-winst/opsi-script (4.12.0.24) stable; urgency=low
 
   * osconf: readConfigFromService: more debug and try-except
-  * * update indy 5455 to 5464
+  * update indy 5455 to 5464
 
 -- Detlef Oertel <d.oertel@uib.de>  Mon, 16 Jul 2018:15:00:00 +0200
 
